--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -4,12 +4,12 @@
 .columns > div {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 16px;
 }
 
 .columns img {
   width: 100%;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .columns > div > div {
@@ -31,14 +31,14 @@
 
 .columns p {
   color: var(--color-text);
-  line-height: 1.6;
+  line-height: 1.5;
 }
 
 @media (width >= 900px) {
   .columns > div {
     align-items: center;
     flex-direction: unset;
-    gap: 32px;
+    gap: 24px;
   }
 
   .columns > div > div {
